# PDPH_PublicDataPythonHackathon

./: .env.example  .gitignore  .vercelignore  AGENTS.md  PLANNING.md  README.md  SPEC.md  compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: health.mjs  main.py  weather.mjs
data/processed/: buildings.parquet  cooling_spots.parquet  grid_cells.parquet  places.json  trees.parquet
docs/: CLAUDE_PROPOSAL_PROMPT.md  COMPETITION_RISK_AUDIT.md  CONTEST.md  HANDOFF.md  HEAT_CARE_PLAN.md  PROJECT_GUIDE.md  PROJECT_STATUS.md  UI_PLAN.md
pipeline/: 01_prepare.py  02_shadows.py  03_grid.py  04_graph.py  05_validate.py  06_sdi.py  07_timelapse.py  08_places.py  09_shadow_frames.py  10_mockdata.py  12_microclimate.py  13_cooling_spots.py
reports/: microclimate_metrics.json  top10.csv  validation_stats.json
src/gneulro/: config.py  cooling.py  departure.py  graph.py  grid.py  heat.py  io_utils.py  microclimate.py  places.py  sdi.py  shadowcast.py  store.py  validate.py  weather.py
tests/: test_cooling.py  test_departure.py  test_graph.py  test_grid.py  test_heat.py  test_io_utils.py  test_microclimate.py  test_places.py  test_sdi.py  test_shadowcast.py  test_store.py  test_weather.py
web/: 3d.html  index.html
web/css/: 3d.css  components.css  layout.css  tokens.css
web/js/: 3d.js  api.js  app.js  heat-care.js  icons.js  map-style.js  map.js  navigation.js  routes.js  search.js  shade.js  sheet.js  state.js  steps.js  theme.js  time.js
web/mock/: buildings.json  buildings_mobile.json  exposure.json  routes_10.json  routes_13.json  (+9 more)
